test/compile-fail/find-file/no-module-in-mod-dir/expected.txt
error: couldn't read ./test/compile-fail/find-file/no-module-in-mod-dir/a/b/c.rhdl: No such file or directory (os error 2)
  ┌─ ./test/compile-fail/find-file/no-module-in-mod-dir/a/mod.rhdl:2:5
  │
2 │     mod c;
  │     ^^^^^^ declared here

